# stardew-mod-manager

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
setup/: Cargo.toml
setup/ui/: appwindow.slint
src/: config.rs  find_game.rs  find_mods_from_downloads.rs  main.rs  smapiapi.rs
ui/: appwindow.slint  util.slint
ui/tabs/: about.slint  downloads.slint  missing-dependencies.slint  modlist.slint
